# yacs

./: .gitignore  Cargo.toml  README.md  install.sh
files/systemd/: yacs.service  yacs_runner.service  yacs_updater.service
src/: components.rs  installer.rs  main.rs  util.rs
