[package]
name = "yacs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.14.2"